--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: San Francisco, sans-serif;
+}
+
 h1 {
   text-align: center;
   font-size: 45px;
@@ -15,13 +19,17 @@ p {
 }
 
 h2 {
-  margin-left: 5px;
+  margin: 0px 5px 30px 5px;
+  /* -left: 5px;
   margin-bottom: 40px;
+  margin-top: 0px; */
 }
 
 .menu {
   text-align: center;
   margin-bottom: 45px;
+  /* border-bottom: grey solid 1px;
+  padding-bottom: 10px; */
 }
 
 .menuitems {
@@ -30,4 +38,13 @@ h2 {
 
 img {
   /* margin-top, margin-bottom: 30px; */
+}
+
+@media (min-width:1000px) {
+  #block {
+    /* background-position: center; */
+    width:1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
